# Pico_freeRTOS_SimpleFOC

./: .clang-format  CMakeLists.txt  FreeRTOSConfig_examples_common.h  README.org  arduino_main.cpp  main.cpp
Modules/Arduino-FOC-2.2/: CMakeLists.txt
Modules/Arduino-FOC-2.2/src/: BLDCMotor.cpp  BLDCMotor.h  StepperMotor.cpp  StepperMotor.h
Modules/Arduino-FOC-2.2/src/common/: foc_utils.cpp
Modules/Arduino-FOC-2.2/src/common/base_classes/: FOCMotor.cpp  FOCMotor.h
Modules/Arduino-FOC-2.2/src/communication/: Commander.cpp  Commander.h  StepDirListener.cpp  StepDirListener.h
Modules/Arduino-FOC-2.2/src/current_sense/hardware_specific/: stm32g4_hal.cpp
Modules/Arduino-FOC-2.2/src/drivers/: StepperDriver2PWM.cpp  StepperDriver2PWM.h
Modules/Arduino-FOC-2.2/src/drivers/hardware_specific/: esp32_mcu.cpp  samd21_mcu.cpp  samd51_mcu.cpp  samd_mcu.cpp  samd_mcu.h
Modules/Arduino-FOC-2.2/src/sensors/: MagneticSensorI2C.cpp  MagneticSensorI2C.h  MagneticSensorSPI.cpp  MagneticSensorSPI.h
Modules/ArduinoCore-avr-1.8.7/: CMakeLists.txt
Modules/ArduinoCore-avr-1.8.7/cores/arduino/: Arduino_HAL.cpp  Arduino_interface.c  Arduino_interface.h  HardwareSerial.cpp  HardwareSerial.h  Printable.h  pwm.pio  pwm_src.c  pwm_src.h  svpwm.pio  svpwm_src.c  svpwm_src.h
Modules/ArduinoCore-avr-1.8.7/libraries/SPI/src/: SPI.cpp  SPI.h
Modules/ArduinoCore-avr-1.8.7/libraries/Wire/src/: Wire.cpp  Wire.h
Modules/clang-format/: format.ps1
clang-format/: format.ps1
